[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/I-pixel-u.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font_Theme.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/unchecked_check_box.png" type="Texture" id=4]
[ext_resource path="res://assets/checked_check_box.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
pause_mode = 2
z_index = 1
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -512.0
margin_top = -296.0
margin_right = 512.0
margin_bottom = 304.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 25.0
margin_right = 712.0
margin_bottom = 575.0
rect_min_size = Vector2( 400, 150 )
custom_constants/separation = 50

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
custom_fonts/font = ExtResource( 3 )
text = "RESUME"

[node name="Controls" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 400.0
margin_bottom = 250.0
rect_min_size = Vector2( 400, 100 )
custom_fonts/font = SubResource( 1 )
text = "CONTROLS"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 100 )
custom_fonts/font = ExtResource( 3 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 400.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 100 )
custom_fonts/font = SubResource( 2 )
text = "EXIT"

[node name="MusicToggle" type="CheckBox" parent="."]
margin_left = 311.0
margin_top = -291.0
margin_right = 351.0
margin_bottom = -251.0
rect_scale = Vector2( 3, 3 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 4 )
custom_styles/focus = SubResource( 4 )
pressed = true
align = 1
expand_icon = true

[node name="Label" type="Label" parent="MusicToggle"]
margin_left = -14.25
margin_top = 34.25
margin_right = 125.75
margin_bottom = 61.25
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Toggle Music"
uppercase = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="toggled" from="MusicToggle" to="." method="_on_MusicToggle_toggled"]
